Attempting to fix the flicker

--- a/css/styles.css
+++ b/css/styles.css
@@ -45,7 +45,7 @@ body::before {
   background-size: cover;
   width: 100%;
   background-repeat: no-repeat;
-  box-shadow: 0px -100px 100px -35px rgb(2 25 75) inset;
+  /* box-shadow: 0px -100px 100px -35px rgb(2 25 75) inset; */
   z-index: -1;
   transition: background 2.5s ease;
 }
